make header search bar more round

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,9 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
+    --font-sans: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --font-serif: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --font-heading: system-ui, Avenir, Helvetica, Arial, sans-serif;
   --font-size: 16px;
   --background: #ffffff;
   --foreground: oklch(0.145 0 0);
@@ -169,6 +172,8 @@
 
   html,
   body {
+    font-family: var(--font-serif);
+    letter-spacing: 0;
     @apply bg-background text-foreground;
     overflow-x: hidden;
   }
